--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -b",
-    "start": "node dist/index.js",
+    "start": "node dist/Server/index.js",
     "dev": "npm run build && npm run start"
   },
   "keywords": [],
@@ -15,12 +15,15 @@
   "dependencies": {
     "@types/dotenv": "^6.1.1",
     "@types/jsonwebtoken": "^9.0.10",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.1.0",
     "express": "^5.1.0",
     "mongoose": "^8.16.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/express": "^5.0.3"
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.23"
   }
 }
