--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -b",
-    "start": "node dist/Server/index.js",
+    "start": "node dist/Server/app.js",
     "dev": "npm run build && npm run start"
   },
   "keywords": [],
